--- a/Home assignment/Home Task.html
+++ b/Home assignment/Home Task.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-  <title>HmoeWork Assignment</title>
+  <title>Home Task</title>
     </head>
     <body>       
         <table  align='center'>
